# llm_notebooks

./: .gitignore  README.md
AgentDemo/: main.py  pyproject.toml
AgentDemo/scripts/: tool.py  utils.py
Recommendation-system-with-LLMs/: Recommendation systems.ipynb  requirements.txt
agent/: Email_Reply_Llama3_CrewAI_+_Groq.ipynb  README.md  grop_llama3_agent.ipynb
decoder_transformer/: decoder.py  decoder_exec.py  encoder_classes_link.py
encoder_transformer/: attention_is_all_you_need_pt1.md  encoder_classes.py  encoder_exec.py
gpt4-tts/: README.md  requirements.txt  utils.py  vision_through_voice_gpt4_tts.ipynb
iollama/: api.py  config.py  docker-compose.yml  model.py  requirements.txt
knowlage_graph/: README.md  Topic_Modeling_with_Quantized_LLMs.ipynb  langchain_LangGraph - Code Development using Multi-Agent Flow.ipynb  langchain_neo4j_devops_rag.ipynb  langchain_neo4j_tips.ipynb  llamaindex_Neo4j.ipynb  llamaindex_nebulagraph_rag_phillies.ipynb  llamaindex_neo4j_multimodal.ipynb
llms_apis_ss_agents_finetuning/: DSPT23_LLMsUnfolded.ipynb
notebooks/: Topic_Modeling_with_Quantized_LLMs.ipynb  credentials.json  huggingface_Code_Llama_2_7B.ipynb  huggingface_REBEL.ipynb  huggingface_llama2_Prompting_Guide_with_Gradio.ipynb  langchain_17megabyteChatBot.ipynb  langchain_Evaluate_RAG_on_Synthetic_Data.ipynb  langchain_Google_Gemini_API.ipynb  langchain_enhancing_rag_with_graph.ipynb  llama_packs_neo4j.ipynb  llamaindex_NebulaGraph.ipynb  llamaindex_Neo4jVectorDemo.ipynb  llamaindex_neo4j_KnowledgeGraph.ipynb  (+1 more)
ollama_knowlage_graph/: README.md  (+2 more)
(+75 files in other folders)
